syntax = "proto3";
package wearable.device;
option go_package="test/protobuf/wearable";

// import "protobuf/user/protomsg.proto";

service WearableService {
    rpc BeatsPerMinute(BeatsPerMinutesRequest) returns (stream BeatsPerMinuteResponse) {};
    rpc CalculateBeatsPerMinute(stream CalculateRequest) returns(stream CalculateResponse) {};
}
// always use camel case while writing global struct type and field values

message BeatsPerMinutesRequest{
string id =1;

}

message  BeatsPerMinuteResponse {
   uint32 value =1;
   uint32 minute =2;
}

message CalculateRequest{
string Id = 1;
uint32 Value = 2;
uint32 Minute =3;
}

message CalculateResponse{
float Average =1;
}